fix: correct letter-spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -113,6 +113,7 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  letter-spacing: 0.1px;
 }
 
 .two-columns__paragraph:not(:last-child) {
@@ -280,6 +281,7 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  letter-spacing: 1px;
 }
 
 .khan__quote-author {
